dep-mssql.yaml
# mssql-dep
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-linux
  template:
    metadata:
      labels:
        app: mssql-linux
    spec:
      containers:
      - name: mssql-linux
        image: alaahajri/mssql-linux
        ports:
        - containerPort: 1433
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"            
        volumeMounts:
          - name: mssql-data
            mountPath: /var/opt/mssql
      volumes:
        - name: mssql-data
          persistentVolumeClaim:
            claimName: mssql-data-claim
