dep-api-applicants.yaml
--- # service-applicants-api
apiVersion: v1
kind: Service
metadata:
  name: service-api-applicants
spec:
  selector:
    app: api-applicants-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
--- # api-applicants-dep
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-applicants-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-applicants-pod
  template:
    metadata:
      labels:
        app: api-applicants-pod
    spec:
      containers:
        - name: api-applicants-cont
          image: alaahajri/service-api-applicants:latest
          resources:
            requests:
              memory: "500Mi"
              cpu: "0.5"
            limits:
              memory: "1500Mi"
              cpu: "1"
