dep-web.yaml
--- # web service
apiVersion: v1
kind: Service
metadata:
  name: web-service
  # namespace: nginx-ingress
spec:
  # type: ClusterIP
  type: LoadBalancer 
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: web-pod
--- # web-dep
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dep
  # namespace: nginx-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-pod
  template:
    metadata:
      labels:
        app: web-pod
    spec:
      containers:
      - name: web-cont                  #web
        image: alaahajri/web:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "500Mi"
            cpu: "0.5"
          limits:
            memory: "1500Mi"
            cpu: "1"
