kubernetesdeployment.yaml
# kubectl apply -f kubernetesdeployment.yaml
# kubectl delete -n default deployment second-app-deployment
# kubectl delete -n default service backend

# to see the dashboard: MUST BE RUNNING ALL TIME
# minikube service web-service
# to see the web page: MUST BE RUNNING ALL TIME
# minikube service front-end

# DNS 
# kubectl get namespaces
---
# web service
apiVersion: v1
kind: Service
metadata:
  name: front-end
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
# web deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web                   #web
        image: alaahajri/web:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "1Gi" 
---
# backend service
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: LoadBalancer
  selector:
    app: api-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
# api deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-app
  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - name: service-api-jobs          #applicants.api
        image:  alaahajri/service-api-jobs:latest  
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
      - name:  service-api-identity     #identity.api
        image: alaahajri/service-api-identity:latest
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"

      - name: service-applicants-api    #applicants.api
        image: alaahajri/service-applicants-api:latest
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
