dep-nginx-ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: example
    namespace: web
    # namespace: cert-manager
    annotations:
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/use-regex: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /
  spec:
    ingressClassName: nginx  
    rules:
      - host: localhost
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: web-service
                  port:
                    number: 80
              path: /
            - pathType: Prefix
              backend:
                service:
                  name: rabbitmq-service
                  port:
                    number: 15672
              path: /rabbitmq
    tls:
      - hosts:
        - localhost
        secretName: nginx-ca-secret                
--- # TLS Secret
apiVersion: v1
kind: Secret
metadata:
  name: nginx-ca-secret
  namespace: web
type: kubernetes.io/tls
data:
  tls.crt: TUlJR0JUQ0NBKzJnQXdJQkFnSVVZclFVNUo2WlE5QW9FbzR6U0k2TnkwNEk3RDR3RFFZSktvWklodmNOQVFFTApCUUF3Z1pFeEN6QUpCZ05WQkFZVEFrWlNNUkV3RHdZRFZRUUlEQWhPWVc1MFpYSnlaVEVUTUJFR0ExVUVCd3dLClEyOTFjbUpsZG05cFpURVRNQkVHQTFVRUNnd0tXVTVQVmlCUVlYSnBjekVOTUFzR0ExVUVDd3dFV1c1dmRqRVMKTUJBR0ExVUVBd3dKYkc5allXeG9iM04wTVNJd0lBWUpLb1pJaHZjTkFRa0JGaE5oYkdGaExtaGhhbkpwUUhsdQpiM1l1WTI5dE1CNFhEVEl6TURNeU56RXpOVEEwTjFvWERUSTBNRE15TmpFek5UQTBOMW93Z1pFeEN6QUpCZ05WCkJBWVRBa1pTTVJFd0R3WURWUVFJREFoT1lXNTBaWEp5WlRFVE1CRUdBM [...]
  tls.key: TUlJSlFnSUJBREFOQmdrcWhraUc5dzBCQVFFRkFBU0NDU3d3Z2drb0FnRUFBb0lDQVFEQjduQnZySkpTcC90cQpXb0w1TlZ6M1ZVVUdOY1d6RFVOYWxYTGMrUlprWEE5SkNuWW1OOUtpMEhGZ0ZtSmM5SjdQQTYxVGVKVmN2RXg5CkdFV1JDMUV4SXVJekFVRUxCWXFOSVEvSEN6akdxZ09OVFVqNk9JV0RzNVp4UTMyc211TmE1YWFJYjZRK05TdFgKYmpPckhyTmtYUU9CYkNYVit5ZGdhc250UkVHMlRORTQ0N3krcW5nVFYvRVlERmNxWHVnUDN0Snh3OGtRZWZaQwpLckI5VzJzc1owcnNGcU5BMkJWNHJjMHEreGd5NmFrREZiTy9tcXg2Mjg0cjlUUE9wZ0pkdmIwTE95cEVsU1VvCjR0TURkRmFjNWlESW83NHExQ1VQUjR6SFVKYi9nWWVENFZqcjAwejI4d [...]
